--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,18 @@ set(PPM
         file_exception.h
         ppm_loader.h ppm_loader.cpp)
 
+SET(SCML
+        simple_console_media_layer.h simple_console_media_layer.cpp
+        Button.h Button.cpp)
+set(CONSOLE_UI
+        console_ui.h console_ui.cpp
+        ${SCML})
+
+
 add_executable(ppm_editor
         main.cpp
         ${PPM}
+        ${CONSOLE_UI}
         canvas.h canvas.cpp
         rgb_color.h
         )
